--- a/DesktopContactsApp/MainWindow.xaml
+++ b/DesktopContactsApp/MainWindow.xaml
@@ -9,10 +9,11 @@
     <StackPanel Margin="10">
         <Button Content="New contact"
                 Click="Button_Click"
-                Margin="10"/>
+                Margin="0 5 0 5"/>
         <TextBox Margin="0 5 0 5"
                    TextChanged="TextBox_TextChanged"/>
         <ListView x:Name="contactsListView"
+                  SelectionChanged="contactsListView_SelectionChanged"
                   Margin="0 5 0 0">
             <ListView.ItemTemplate>
                 <DataTemplate>
